# overseerr-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
src/: __init__.py  server.py
src/models/: __init__.py  overseerr.py  plex.py
src/tools/: __init__.py  overseerr_client.py  plex_client.py
